# context.Orion-LD

./: CHANGES_NEXT_RELEASE  CMakeLists.txt  README.md
doc/manuals-ld/: installation-guide-ubuntu-20.04.1.md
docker/: Dockerfile-ubi-base
docker/build-ubi/: install-boost-ops-dependencies.sh  install-fastdds.sh  install-gnutls.sh  install-k-libs.sh  install-mongo-driver.sh  install-mongoc-driver.sh  install-postgres-client.sh
etc/config/: ftClient
etc/init.d/: spider.ubuntu
scripts/: check_files_compliance.py  requirements.txt  style_check.sh  style_check_in_makefile.sh  testEnv.sh
signatures/version1/: cla.json
src/app/orionld/: CMakeLists.txt
src/app/spider/: CMakeLists.txt  spider.cpp
src/lib/orionld/common/: orionldState.h  traceLevels.h
src/lib/orionld/dds/: CMakeLists.txt  NgsildEntity.cxx  NgsildEntity.h  NgsildEntity.idl  NgsildEntityCdrAux.hpp  NgsildEntityCdrAux.ipp  NgsildEntityPubSubTypes.cxx  NgsildEntityPubSubTypes.h  NgsildPublisher.cpp  NgsildPublisher.h  NgsildSubscriber.h  config.h  ddsPublish.cpp  ddsPublish.h  ddsSubscribe.cpp  ddsSubscribe.h
src/lib/orionld/mhd/: CMakeLists.txt  mhdConnectionInit.cpp  mhdRequest.cpp  mhdRequest.h  mhdRequestEnded.cpp  mhdRequestEnded.h  mhdStart.cpp  mhdStart.h
src/lib/orionld/types/: RegCacheItem.h
test/acceptance/behave/: requirements.txt
test/acceptance/lettuce/: requirements.txt
test/functionalTest/: harnessFunctions.sh  requirements.txt  testHarness.sh
test/functionalTest/cases/0000_dds/: dds_0.test  dds_1.test
test/functionalTest/cases/0000_ngsild/: ngsild_issue_1573.test
test/functionalTest/ftClient/: CMakeLists.txt  ddsPublish.cpp  ddsPublish.h  deleteDdsDump.cpp  deleteDdsDump.h  deleteDump.cpp  deleteDump.h  die.cpp  die.h  ftClient.cpp  ftErrorResponse.cpp  ftErrorResponse.h  getDdsDump.cpp  getDdsDump.h  getDump.cpp  getDump.h  postDdsPub.cpp  postDdsPub.h  postDdsSub.cpp  postDdsSub.h
test/unittests/: CMakeLists.txt
